--- a/res/layout/list.xml
+++ b/res/layout/list.xml
@@ -3,9 +3,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/img"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="60dip"
+        android:gravity="center_vertical"
+        android:background="@drawable/app_item_bg"
+        android:orientation="horizontal" >
 
+        <ImageView
+            android:id="@+id/img_path"
+            android:layout_width="50dip"
+            android:layout_height="50dip"
+            android:background="@drawable/file_delete"
+            android:layout_marginLeft="10dip" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dip"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/edt_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="名字"             
+                android:textSize="12dip" />
+
+            <TextView
+                android:id="@+id/edt_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dip"
+                android:text="大小"
+                android:textSize="14dip" />
+        </LinearLayout>        
+    </LinearLayout>   
 </LinearLayout>
